--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
 		"nodemon": "^2.0.20",
 		"pre-commit": "^1.2.2",
 		"ts-node": "^10.9.1",
-		"typescript": "^4.8.4"
+		"typescript": "^4.8.4",
+		"@types/cors": "^2.8.17"
 	},
 	"dependencies": {
-		"express": "^4.18.2"
+		"express": "^4.18.2",
+		"mongoose": "^6.12.7",
+        "cors": "^2.8.5"
 	}
 }
